# OperSys

./: .gitignore
Fib/: CMakeLists.txt
Fib/Fib/: Fib.cpp  Fib.h  main.cpp
Fib/tests/: FibTest.cpp
Kolok/: CMakeLists.txt  Questions.md
Kolok/include/factorial/: factorial_calculator.hpp
Kolok/include/linked_list/: linked_list.hpp
Kolok/include/unique/: duplicate_remover.hpp
Kolok/src/factorial/: factorial_calculator.cpp
Kolok/src/linked_list/: linked_list.cpp
Kolok/src/unique/: duplicate_remover.cpp
Kolok/tests/: CMakeLists.txt  test_duplicate_remover.cpp  test_factorial.cpp  test_linked_list.cpp
Kolok3/: Answer.md
Lab1/: Lab1.sln
Lab1.1/: CMakeLists.txt
Lab1.1/Creater/: Creator.h  mainC.cpp
Lab1.1/Lab1.1/: Lab1.1.cpp
Lab1.1/Reporter/: Reporter.h  mainR.cpp
Lab1.1/Tests/: tests.cpp
Lab1/Creator/: Creator.vcxproj  Creator.vcxproj.filters  mainC.cpp
Lab1/Creator/x64/Release/: Creator.exe.recipe  Creator.iobj  Creator.ipdb
Lab1/Creator/x64/Release/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1/Lab1/: Lab1.vcxproj  main.cpp
Lab1/Lab1/x64/Release/: Lab1.exe.recipe  Lab1.iobj  Lab1.ipdb
Lab1/Lab1/x64/Release/Lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1/Reporter/: Reporter.vcxproj  Reporter.vcxproj.filters  mainR.cpp
Lab1/Reporter/x64/Release/: Reporter.exe.recipe  Reporter.iobj  Reporter.ipdb
Lab1/Reporter/x64/Release/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Reporter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1/x64/Release/: creat.txt  realese.txt  report.txt  report2.txt  wigu.txt
Lab2/: CMakeLists.txt
Lab2/Lab2/: Lab2.cpp  Lab2.h  Lab214.cpp
Lab2/Tests/: tests.cpp  tests14.cpp
Lab4/: CMakeLists.txt
Lab4/Lab4/: Lab4.cpp
Lab4/Receiver/: Receiver.cpp
Lab4/Reciever/: Reciever.cpp
Lab4/data/: structs.h
kolok2/: main.cpp
lab3/: CMakeLists.txt
lab3/Tests/: tests.cpp
lab3/Tests14/: tests.cpp
lab3/lab3/: lab3.cpp  lab3.h
lab3/lab314/: lab3.cpp  lab3.h
lab5/: CMakeLists.txt
lab5/Client/: Client.cpp  clinet.cpp
lab5/Server/: Seeerver.cpp  Server.cpp  server.cpp
lab5/data/: structs.h
